--- a/.env
+++ b/.env
@@ -1,4 +1,12 @@
 
+DB_TYPE=mysql
+DB_HOST=127.0.0.1
+DB_DATABASE=stock_analysis
+DB_USERNAME=huoxuhuoxu
+DB_PASSWORD=123456
+DB_PORT=3306
+
+NODE_ENV=production
 
 
 PORT=7879
